# sample_prj

./: .travis.yml  LICENSE  Makefile  README.rst  azure-pipelines.yml  pyproject.toml  setup.cfg  tox.ini
sample_prj/: __init__.py  __main__.py  cli.py
tests/: __init__.py  test_sample_prj.py
