[tool]
[tool.poetry]
name = "sample_prj"
version = "0.4.0"
description = "Python Boilerplate contains all the "
authors = ["StdTom <stdtom@gmx.net>"]
license = "Apache Software License 2.0"

readme = "README.rst"

homepage = "https://github.com/stdtom/sample_prj"

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10"
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
bump2version = "*"
coverage = "*"
flake8 = "*"
isort = "*"
pre-commit = "*"
pytest = "*"
pytest-runner = "*"
Sphinx = "*"
tox = "*"
twine = "*"
watchdog = "*"
wheel = "*"
click = "<=8.0.4"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
